details-service-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: details-service
  labels:
    app: detailsservice
spec:
  type: ClusterIP
  ports:
    - name: app-port
      port: 4047
      targetPort: 4047
      protocol: TCP
  selector:
     app: detailsservice
